--- a/locale/pt_BR.po
+++ b/locale/pt_BR.po
@@ -4,19 +4,19 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "field:party.party,relations:"
 msgid "Relations"
-msgstr "Relations"
+msgstr "Relações"
 
 msgctxt "field:party.relation,create_date:"
 msgid "Create Date"
-msgstr "Date de création"
+msgstr "Data de Criação"
 
 msgctxt "field:party.relation,create_uid:"
 msgid "Create User"
-msgstr "Créé par"
+msgstr "Criado por"
 
 msgctxt "field:party.relation,from_:"
 msgid "From"
-msgstr "de"
+msgstr "De"
 
 msgctxt "field:party.relation,id:"
 msgid "ID"
@@ -24,35 +24,35 @@ msgstr "ID"
 
 msgctxt "field:party.relation,rec_name:"
 msgid "Name"
-msgstr "Nom"
+msgstr "Nome"
 
 msgctxt "field:party.relation,to:"
 msgid "To"
-msgstr "À"
+msgstr "Para"
 
 msgctxt "field:party.relation,type:"
 msgid "Type"
-msgstr "Type"
+msgstr "Tipo"
 
 msgctxt "field:party.relation,write_date:"
 msgid "Write Date"
-msgstr "Date de mise à jour"
+msgstr "Data de Edição"
 
 msgctxt "field:party.relation,write_uid:"
 msgid "Write User"
-msgstr "Mis à jour par"
+msgstr "Criado por"
 
 msgctxt "field:party.relation.all,create_date:"
 msgid "Create Date"
-msgstr "Date de création"
+msgstr "Data de Criação"
 
 msgctxt "field:party.relation.all,create_uid:"
 msgid "Create User"
-msgstr "Créé par"
+msgstr "Criado por"
 
 msgctxt "field:party.relation.all,from_:"
 msgid "From"
-msgstr "de"
+msgstr "De"
 
 msgctxt "field:party.relation.all,id:"
 msgid "ID"
@@ -60,31 +60,31 @@ msgstr "ID"
 
 msgctxt "field:party.relation.all,rec_name:"
 msgid "Name"
-msgstr "Nom"
+msgstr "Nome"
 
 msgctxt "field:party.relation.all,to:"
 msgid "To"
-msgstr "de"
+msgstr "Para"
 
 msgctxt "field:party.relation.all,type:"
 msgid "Type"
-msgstr "Type"
+msgstr "Tipo"
 
 msgctxt "field:party.relation.all,write_date:"
 msgid "Write Date"
-msgstr "Date de mise à jour"
+msgstr "Data de Edição"
 
 msgctxt "field:party.relation.all,write_uid:"
 msgid "Write User"
-msgstr "Mis à jour par"
+msgstr "Editado por"
 
 msgctxt "field:party.relation.type,create_date:"
 msgid "Create Date"
-msgstr "Date de création"
+msgstr "Data de Criação"
 
 msgctxt "field:party.relation.type,create_uid:"
 msgid "Create User"
-msgstr "Créé par"
+msgstr "Criado por"
 
 msgctxt "field:party.relation.type,id:"
 msgid "ID"
@@ -92,68 +92,68 @@ msgstr "ID"
 
 msgctxt "field:party.relation.type,name:"
 msgid "Name"
-msgstr "Nom"
+msgstr "Nome"
 
 msgctxt "field:party.relation.type,rec_name:"
 msgid "Name"
-msgstr "Nom"
+msgstr "Nome"
 
 msgctxt "field:party.relation.type,reverse:"
 msgid "Reverse Relation"
-msgstr "Relation inverse"
+msgstr "Relação Reversa"
 
 msgctxt "field:party.relation.type,write_date:"
 msgid "Write Date"
-msgstr "Date de mise à jour"
+msgstr "Data de edição"
 
 msgctxt "field:party.relation.type,write_uid:"
 msgid "Write User"
-msgstr "Mis à jour par"
+msgstr "Editado por"
 
 msgctxt "model:ir.action,name:act_relation_all"
 msgid "Party Relations"
-msgstr "Relations tiers"
+msgstr "Relações da Pessoa"
 
 msgctxt "model:ir.action,name:act_relation_type"
 msgid "Relation Types"
-msgstr "Types de relation"
+msgstr "Tipos de Relação"
 
 msgctxt "model:ir.ui.menu,name:menu_relation_all"
 msgid "Party Relations"
-msgstr "Relations tiers"
+msgstr "Relações da Pessoa"
 
 msgctxt "model:ir.ui.menu,name:menu_relation_type"
 msgid "Relation Types"
-msgstr "Types de relation"
+msgstr "Tipos de Relação"
 
 msgctxt "model:party.relation,name:"
 msgid "Party Relation"
-msgstr "Relation tiers"
+msgstr "Relação da Pessoa"
 
 msgctxt "model:party.relation.all,name:"
 msgid "Party Relation"
-msgstr "Relation tiers"
+msgstr "Relação da Pessoa"
 
 msgctxt "model:party.relation.type,name:"
 msgid "Relation Type"
-msgstr "Type de relation"
+msgstr "Tipo de Relação"
 
 msgctxt "view:party.party:"
 msgid "Relations"
-msgstr "Relations"
+msgstr "Relações"
 
 msgctxt "view:party.relation.all:"
 msgid "Relation"
-msgstr "Relation"
+msgstr "Relação"
 
 msgctxt "view:party.relation.all:"
 msgid "Relations"
-msgstr "Relations"
+msgstr "Relações"
 
 msgctxt "view:party.relation.type:"
 msgid "Party Relation Type"
-msgstr "Type de relation tiers"
+msgstr "Tipo de relação entre pessoas"
 
 msgctxt "view:party.relation.type:"
 msgid "Party Relation Types"
-msgstr "Types de relation tiers"
+msgstr "Tipos de relação entre pessoas"
