--- a/locale/es_CO.po
+++ b/locale/es_CO.po
@@ -4,181 +4,156 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "field:party.party,relations:"
 msgid "Relations"
-msgstr ""
+msgstr "Relaciones"
 
-#, fuzzy
 msgctxt "field:party.relation,create_date:"
 msgid "Create Date"
 msgstr "Fecha de Creación"
 
-#, fuzzy
 msgctxt "field:party.relation,create_uid:"
 msgid "Create User"
 msgstr "Creado por Usuario"
 
-#, fuzzy
 msgctxt "field:party.relation,from_:"
 msgid "From"
 msgstr "De"
 
-#, fuzzy
 msgctxt "field:party.relation,id:"
 msgid "ID"
 msgstr "ID"
 
-#, fuzzy
 msgctxt "field:party.relation,rec_name:"
 msgid "Name"
 msgstr "Nombre"
 
-#, fuzzy
 msgctxt "field:party.relation,to:"
 msgid "To"
 msgstr "A"
 
-#, fuzzy
 msgctxt "field:party.relation,type:"
 msgid "Type"
 msgstr "Tipo"
 
-#, fuzzy
 msgctxt "field:party.relation,write_date:"
 msgid "Write Date"
 msgstr "Modificado por Usuario"
 
-#, fuzzy
 msgctxt "field:party.relation,write_uid:"
 msgid "Write User"
 msgstr "Modificado por Usuario"
 
-#, fuzzy
 msgctxt "field:party.relation.all,create_date:"
 msgid "Create Date"
 msgstr "Fecha de Creación"
 
-#, fuzzy
 msgctxt "field:party.relation.all,create_uid:"
 msgid "Create User"
 msgstr "Creado por Usuario"
 
-#, fuzzy
 msgctxt "field:party.relation.all,from_:"
 msgid "From"
 msgstr "De"
 
-#, fuzzy
 msgctxt "field:party.relation.all,id:"
 msgid "ID"
 msgstr "ID"
 
-#, fuzzy
 msgctxt "field:party.relation.all,rec_name:"
 msgid "Name"
 msgstr "Nombre"
 
-#, fuzzy
 msgctxt "field:party.relation.all,to:"
 msgid "To"
 msgstr "A"
 
-#, fuzzy
 msgctxt "field:party.relation.all,type:"
 msgid "Type"
 msgstr "Tipo"
 
-#, fuzzy
 msgctxt "field:party.relation.all,write_date:"
 msgid "Write Date"
 msgstr "Modificado por Usuario"
 
-#, fuzzy
 msgctxt "field:party.relation.all,write_uid:"
 msgid "Write User"
 msgstr "Modificado por Usuario"
 
-#, fuzzy
 msgctxt "field:party.relation.type,create_date:"
 msgid "Create Date"
 msgstr "Fecha de Creación"
 
-#, fuzzy
 msgctxt "field:party.relation.type,create_uid:"
 msgid "Create User"
 msgstr "Creado por Usuario"
 
-#, fuzzy
 msgctxt "field:party.relation.type,id:"
 msgid "ID"
 msgstr "ID"
 
-#, fuzzy
 msgctxt "field:party.relation.type,name:"
 msgid "Name"
 msgstr "Nombre"
 
-#, fuzzy
 msgctxt "field:party.relation.type,rec_name:"
 msgid "Name"
 msgstr "Nombre"
 
 msgctxt "field:party.relation.type,reverse:"
 msgid "Reverse Relation"
-msgstr ""
+msgstr "Relación Inversa"
 
-#, fuzzy
 msgctxt "field:party.relation.type,write_date:"
 msgid "Write Date"
 msgstr "Modificado por Usuario"
 
-#, fuzzy
 msgctxt "field:party.relation.type,write_uid:"
 msgid "Write User"
 msgstr "Modificado por Usuario"
 
 msgctxt "model:ir.action,name:act_relation_all"
 msgid "Party Relations"
-msgstr ""
+msgstr "Relaciones de Tercero"
 
 msgctxt "model:ir.action,name:act_relation_type"
 msgid "Relation Types"
-msgstr ""
+msgstr "Tipos de Relación"
 
 msgctxt "model:ir.ui.menu,name:menu_relation_all"
 msgid "Party Relations"
-msgstr ""
+msgstr "Relaciones de Tercero"
 
 msgctxt "model:ir.ui.menu,name:menu_relation_type"
 msgid "Relation Types"
-msgstr ""
+msgstr "Tipos de Relación"
 
 msgctxt "model:party.relation,name:"
 msgid "Party Relation"
-msgstr ""
+msgstr "Relación de Tercero"
 
 msgctxt "model:party.relation.all,name:"
 msgid "Party Relation"
-msgstr ""
+msgstr "Relación de Tercero"
 
 msgctxt "model:party.relation.type,name:"
 msgid "Relation Type"
-msgstr ""
+msgstr "Tipo de Relación"
 
 msgctxt "view:party.party:"
 msgid "Relations"
-msgstr ""
+msgstr "Relaciones"
 
 msgctxt "view:party.relation.all:"
 msgid "Relation"
-msgstr ""
+msgstr "Relación"
 
 msgctxt "view:party.relation.all:"
 msgid "Relations"
-msgstr ""
+msgstr "Relaciones"
 
 msgctxt "view:party.relation.type:"
 msgid "Party Relation Type"
-msgstr ""
+msgstr "Tipo de Relación de Tercero"
 
 msgctxt "view:party.relation.type:"
 msgid "Party Relation Types"
-msgstr ""
+msgstr "Tipos de Relación de Tercero"
