Rename language codes
issue5443

--- a/locale/cs.po
+++ b/locale/cs.po
@@ -22,9 +22,10 @@ msgctxt "field:party.relation,id:"
 msgid "ID"
 msgstr ""
 
+#, fuzzy
 msgctxt "field:party.relation,rec_name:"
 msgid "Name"
-msgstr ""
+msgstr "Namu"
 
 msgctxt "field:party.relation,to:"
 msgid "To"
@@ -58,9 +59,10 @@ msgctxt "field:party.relation.all,id:"
 msgid "ID"
 msgstr ""
 
+#, fuzzy
 msgctxt "field:party.relation.all,rec_name:"
 msgid "Name"
-msgstr ""
+msgstr "Namu"
 
 msgctxt "field:party.relation.all,to:"
 msgid "To"
@@ -90,13 +92,15 @@ msgctxt "field:party.relation.type,id:"
 msgid "ID"
 msgstr ""
 
+#, fuzzy
 msgctxt "field:party.relation.type,name:"
 msgid "Name"
-msgstr ""
+msgstr "Namu"
 
+#, fuzzy
 msgctxt "field:party.relation.type,rec_name:"
 msgid "Name"
-msgstr ""
+msgstr "Namu"
 
 msgctxt "field:party.relation.type,reverse:"
 msgid "Reverse Relation"
