--- a/locale/lo.po
+++ b/locale/lo.po
@@ -6,26 +6,29 @@ msgctxt "field:party.party,relations:"
 msgid "Relations"
 msgstr ""
 
+#, fuzzy
 msgctxt "field:party.relation,create_date:"
 msgid "Create Date"
-msgstr ""
+msgstr "ສ້າງວັນທີ"
 
+#, fuzzy
 msgctxt "field:party.relation,create_uid:"
 msgid "Create User"
-msgstr ""
+msgstr "ສ້າງຜູ້ໃຊ້ງານ"
 
 msgctxt "field:party.relation,from_:"
 msgid "From"
 msgstr ""
 
+#, fuzzy
 msgctxt "field:party.relation,id:"
 msgid "ID"
-msgstr ""
+msgstr "ເລດລຳດັບ"
 
 #, fuzzy
 msgctxt "field:party.relation,rec_name:"
 msgid "Name"
-msgstr "Naam bijlage"
+msgstr "ຊື່"
 
 msgctxt "field:party.relation,to:"
 msgid "To"
@@ -34,36 +37,41 @@ msgstr ""
 #, fuzzy
 msgctxt "field:party.relation,type:"
 msgid "Type"
-msgstr "Type"
+msgstr "ຮູບແບບ"
 
+#, fuzzy
 msgctxt "field:party.relation,write_date:"
 msgid "Write Date"
-msgstr ""
+msgstr "ວັນທີບັນທຶກ"
 
+#, fuzzy
 msgctxt "field:party.relation,write_uid:"
 msgid "Write User"
-msgstr ""
+msgstr "ສ້າງຜູ້ໃຊ້"
 
+#, fuzzy
 msgctxt "field:party.relation.all,create_date:"
 msgid "Create Date"
-msgstr ""
+msgstr "ສ້າງວັນທີ"
 
+#, fuzzy
 msgctxt "field:party.relation.all,create_uid:"
 msgid "Create User"
-msgstr ""
+msgstr "ສ້າງຜູ້ໃຊ້ງານ"
 
 msgctxt "field:party.relation.all,from_:"
 msgid "From"
 msgstr ""
 
+#, fuzzy
 msgctxt "field:party.relation.all,id:"
 msgid "ID"
-msgstr ""
+msgstr "ເລດລຳດັບ"
 
 #, fuzzy
 msgctxt "field:party.relation.all,rec_name:"
 msgid "Name"
-msgstr "Naam bijlage"
+msgstr "ຊື່"
 
 msgctxt "field:party.relation.all,to:"
 msgid "To"
@@ -72,49 +80,56 @@ msgstr ""
 #, fuzzy
 msgctxt "field:party.relation.all,type:"
 msgid "Type"
-msgstr "Type"
+msgstr "ຮູບແບບ"
 
+#, fuzzy
 msgctxt "field:party.relation.all,write_date:"
 msgid "Write Date"
-msgstr ""
+msgstr "ວັນທີບັນທຶກ"
 
+#, fuzzy
 msgctxt "field:party.relation.all,write_uid:"
 msgid "Write User"
-msgstr ""
+msgstr "ສ້າງຜູ້ໃຊ້"
 
+#, fuzzy
 msgctxt "field:party.relation.type,create_date:"
 msgid "Create Date"
-msgstr ""
+msgstr "ສ້າງວັນທີ"
 
+#, fuzzy
 msgctxt "field:party.relation.type,create_uid:"
 msgid "Create User"
-msgstr ""
+msgstr "ສ້າງຜູ້ໃຊ້ງານ"
 
+#, fuzzy
 msgctxt "field:party.relation.type,id:"
 msgid "ID"
-msgstr ""
+msgstr "ເລດລຳດັບ"
 
 #, fuzzy
 msgctxt "field:party.relation.type,name:"
 msgid "Name"
-msgstr "Naam bijlage"
+msgstr "ຊື່"
 
 #, fuzzy
 msgctxt "field:party.relation.type,rec_name:"
 msgid "Name"
-msgstr "Naam bijlage"
+msgstr "ຊື່"
 
 msgctxt "field:party.relation.type,reverse:"
 msgid "Reverse Relation"
 msgstr ""
 
+#, fuzzy
 msgctxt "field:party.relation.type,write_date:"
 msgid "Write Date"
-msgstr ""
+msgstr "ວັນທີບັນທຶກ"
 
+#, fuzzy
 msgctxt "field:party.relation.type,write_uid:"
 msgid "Write User"
-msgstr ""
+msgstr "ສ້າງຜູ້ໃຊ້"
 
 msgctxt "model:ir.action,name:act_relation_all"
 msgid "Party Relations"
