--- a/locale/ca.po
+++ b/locale/ca.po
@@ -8,11 +8,11 @@ msgstr "Relacions"
 
 msgctxt "field:party.relation,create_date:"
 msgid "Create Date"
-msgstr "Data creació"
+msgstr "Data de creació"
 
 msgctxt "field:party.relation,create_uid:"
 msgid "Create User"
-msgstr "Usuari creació"
+msgstr "Usuari de creació"
 
 msgctxt "field:party.relation,from_:"
 msgid "From"
@@ -36,19 +36,19 @@ msgstr "Tipus"
 
 msgctxt "field:party.relation,write_date:"
 msgid "Write Date"
-msgstr "Data modificació"
+msgstr "Data de modificació"
 
 msgctxt "field:party.relation,write_uid:"
 msgid "Write User"
-msgstr "Usuari modificació"
+msgstr "Usuari de modificació"
 
 msgctxt "field:party.relation.all,create_date:"
 msgid "Create Date"
-msgstr "Data creació"
+msgstr "Data de creació"
 
 msgctxt "field:party.relation.all,create_uid:"
 msgid "Create User"
-msgstr "Usuari creació"
+msgstr "Usuari de creació"
 
 msgctxt "field:party.relation.all,from_:"
 msgid "From"
@@ -72,19 +72,19 @@ msgstr "Tipus"
 
 msgctxt "field:party.relation.all,write_date:"
 msgid "Write Date"
-msgstr "Data modificació"
+msgstr "Data de modificació"
 
 msgctxt "field:party.relation.all,write_uid:"
 msgid "Write User"
-msgstr "Usuari modificació"
+msgstr "Usuari de modificació"
 
 msgctxt "field:party.relation.type,create_date:"
 msgid "Create Date"
-msgstr "Data creació"
+msgstr "Data de creació"
 
 msgctxt "field:party.relation.type,create_uid:"
 msgid "Create User"
-msgstr "Usuari creació"
+msgstr "Usuari de creació"
 
 msgctxt "field:party.relation.type,id:"
 msgid "ID"
@@ -104,11 +104,11 @@ msgstr "Relació inversa"
 
 msgctxt "field:party.relation.type,write_date:"
 msgid "Write Date"
-msgstr "Data modificació"
+msgstr "Data de modificació"
 
 msgctxt "field:party.relation.type,write_uid:"
 msgid "Write User"
-msgstr "Usuari modificació"
+msgstr "Usuari de modificació"
 
 msgctxt "model:ir.action,name:act_relation_all"
 msgid "Party Relations"
