--- a/locale/pl.po
+++ b/locale/pl.po
@@ -4,143 +4,140 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "field:party.party,relations:"
 msgid "Relations"
-msgstr ""
+msgstr "Relacje"
 
 msgctxt "field:party.relation,create_date:"
 msgid "Create Date"
-msgstr ""
+msgstr "Data utworzenia"
 
 msgctxt "field:party.relation,create_uid:"
 msgid "Create User"
-msgstr ""
+msgstr "Utworzył"
 
 msgctxt "field:party.relation,from_:"
 msgid "From"
-msgstr ""
+msgstr "Od"
 
 msgctxt "field:party.relation,id:"
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 msgctxt "field:party.relation,rec_name:"
 msgid "Name"
-msgstr ""
+msgstr "Nazwa"
 
 msgctxt "field:party.relation,to:"
 msgid "To"
-msgstr ""
+msgstr "Do"
 
 msgctxt "field:party.relation,type:"
 msgid "Type"
-msgstr ""
+msgstr "Typ"
 
 msgctxt "field:party.relation,write_date:"
 msgid "Write Date"
-msgstr ""
+msgstr "Data zapisu"
 
 msgctxt "field:party.relation,write_uid:"
 msgid "Write User"
-msgstr ""
+msgstr "Zapisał"
 
 msgctxt "field:party.relation.all,create_date:"
 msgid "Create Date"
-msgstr ""
+msgstr "Data utworzenia"
 
 msgctxt "field:party.relation.all,create_uid:"
 msgid "Create User"
-msgstr ""
+msgstr "Utworzył"
 
 msgctxt "field:party.relation.all,from_:"
 msgid "From"
-msgstr ""
+msgstr "Od"
 
 msgctxt "field:party.relation.all,id:"
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 msgctxt "field:party.relation.all,rec_name:"
 msgid "Name"
-msgstr ""
+msgstr "Nazwa"
 
 msgctxt "field:party.relation.all,to:"
 msgid "To"
-msgstr ""
+msgstr "Do"
 
 msgctxt "field:party.relation.all,type:"
 msgid "Type"
-msgstr ""
+msgstr "Typ"
 
 msgctxt "field:party.relation.all,write_date:"
 msgid "Write Date"
-msgstr ""
+msgstr "Data zapisu"
 
 msgctxt "field:party.relation.all,write_uid:"
 msgid "Write User"
-msgstr ""
+msgstr "Zapisał"
 
 msgctxt "field:party.relation.type,create_date:"
 msgid "Create Date"
-msgstr ""
+msgstr "Data utworzenia"
 
 msgctxt "field:party.relation.type,create_uid:"
 msgid "Create User"
-msgstr ""
+msgstr "Utworzył"
 
 msgctxt "field:party.relation.type,id:"
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 msgctxt "field:party.relation.type,name:"
 msgid "Name"
-msgstr ""
+msgstr "Nazwa"
 
 msgctxt "field:party.relation.type,rec_name:"
 msgid "Name"
-msgstr ""
+msgstr "Nazwa"
 
 msgctxt "field:party.relation.type,reverse:"
 msgid "Reverse Relation"
-msgstr ""
+msgstr "Odwrotna relacja"
 
 msgctxt "field:party.relation.type,write_date:"
 msgid "Write Date"
-msgstr ""
+msgstr "Data zapisu"
 
 msgctxt "field:party.relation.type,write_uid:"
 msgid "Write User"
-msgstr ""
+msgstr "Zapisał"
 
 msgctxt "model:ir.action,name:act_relation_all"
 msgid "Party Relations"
-msgstr "Party Relations"
+msgstr "Relacje strony"
 
 msgctxt "model:ir.action,name:act_relation_type"
 msgid "Relation Types"
-msgstr "Relation Types"
+msgstr "Typy relacji"
 
 msgctxt "model:ir.ui.menu,name:menu_relation_all"
 msgid "Party Relations"
-msgstr "Party Relations"
+msgstr "Relacje strony"
 
 msgctxt "model:ir.ui.menu,name:menu_relation_type"
 msgid "Relation Types"
-msgstr "Relation Types"
+msgstr "Typy relacji"
 
-#, fuzzy
 msgctxt "model:party.relation,name:"
 msgid "Party Relation"
-msgstr "Party Relations"
+msgstr "Relacje strony"
 
-#, fuzzy
 msgctxt "model:party.relation.all,name:"
 msgid "Party Relation"
-msgstr "Party Relations"
+msgstr "Relacje strony"
 
-#, fuzzy
 msgctxt "model:party.relation.type,name:"
 msgid "Relation Type"
-msgstr "Relation Types"
+msgstr "Typy relacji"
 
 msgctxt "view:party.party:"
 msgid "Relations"
-msgstr ""
+msgstr "Relacje"
