--- a/locale/de.po
+++ b/locale/de.po
@@ -110,6 +110,14 @@ msgctxt "field:party.relation.type,write_uid:"
 msgid "Write User"
 msgstr "Letzte Änderung durch"
 
+msgctxt "help:party.relation.type,name:"
+msgid "The main identifier of the relation type."
+msgstr "Die Hauptbezeichnung des Beziehungstypen."
+
+msgctxt "help:party.relation.type,reverse:"
+msgid "Create automatically the reverse relation."
+msgstr "Die Umkehrrelation automatisch erstellen."
+
 msgctxt "model:ir.action,name:act_relation_all"
 msgid "Party Relations"
 msgstr "Parteibeziehungen"
