--- a/locale/lo.po
+++ b/locale/lo.po
@@ -4,161 +4,148 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "field:party.party,relations:"
 msgid "Relations"
-msgstr ""
+msgstr "ຄວາມສຳພັນ"
 
-#, fuzzy
 msgctxt "field:party.relation,create_date:"
 msgid "Create Date"
-msgstr "ສ້າງວັນທີ"
+msgstr "ວັນທີສ້າງ"
 
-#, fuzzy
 msgctxt "field:party.relation,create_uid:"
 msgid "Create User"
-msgstr "ສ້າງຜູ້ໃຊ້ງານ"
+msgstr "ຜູ້ສ້າງ"
 
 msgctxt "field:party.relation,from_:"
 msgid "From"
-msgstr ""
+msgstr "ຈາກ"
 
-#, fuzzy
 msgctxt "field:party.relation,id:"
 msgid "ID"
-msgstr "ເລດລຳດັບ"
+msgstr "ເລກລຳດັບ"
 
-#, fuzzy
 msgctxt "field:party.relation,rec_name:"
 msgid "Name"
 msgstr "ຊື່"
 
 msgctxt "field:party.relation,to:"
 msgid "To"
-msgstr ""
+msgstr "ເຖິງ"
 
-#, fuzzy
 msgctxt "field:party.relation,type:"
 msgid "Type"
-msgstr "ຮູບແບບ"
+msgstr "ປະເພດ"
 
-#, fuzzy
 msgctxt "field:party.relation,write_date:"
 msgid "Write Date"
 msgstr "ວັນທີບັນທຶກ"
 
-#, fuzzy
 msgctxt "field:party.relation,write_uid:"
 msgid "Write User"
-msgstr "ສ້າງຜູ້ໃຊ້"
+msgstr "ຜູ້ບັນທຶກ"
 
-#, fuzzy
 msgctxt "field:party.relation.all,create_date:"
 msgid "Create Date"
-msgstr "ສ້າງວັນທີ"
+msgstr "ວັນທີສ້າງ"
 
-#, fuzzy
 msgctxt "field:party.relation.all,create_uid:"
 msgid "Create User"
-msgstr "ສ້າງຜູ້ໃຊ້ງານ"
+msgstr "ຜູ້ສ້າງ"
 
 msgctxt "field:party.relation.all,from_:"
 msgid "From"
-msgstr ""
+msgstr "ຈາກ"
 
-#, fuzzy
 msgctxt "field:party.relation.all,id:"
 msgid "ID"
 msgstr "ເລດລຳດັບ"
 
-#, fuzzy
 msgctxt "field:party.relation.all,rec_name:"
 msgid "Name"
 msgstr "ຊື່"
 
 msgctxt "field:party.relation.all,to:"
 msgid "To"
-msgstr ""
+msgstr "ເຖິງ"
 
-#, fuzzy
 msgctxt "field:party.relation.all,type:"
 msgid "Type"
-msgstr "ຮູບແບບ"
+msgstr "ປະເພດ"
 
-#, fuzzy
 msgctxt "field:party.relation.all,write_date:"
 msgid "Write Date"
 msgstr "ວັນທີບັນທຶກ"
 
-#, fuzzy
 msgctxt "field:party.relation.all,write_uid:"
 msgid "Write User"
-msgstr "ສ້າງຜູ້ໃຊ້"
+msgstr "ຜູ້ບັນທຶກ"
 
-#, fuzzy
 msgctxt "field:party.relation.type,create_date:"
 msgid "Create Date"
-msgstr "ສ້າງວັນທີ"
+msgstr "ວັນທີສ້າງ"
 
-#, fuzzy
 msgctxt "field:party.relation.type,create_uid:"
 msgid "Create User"
-msgstr "ສ້າງຜູ້ໃຊ້ງານ"
+msgstr "ຜູ້ສ້າງ"
 
-#, fuzzy
 msgctxt "field:party.relation.type,id:"
 msgid "ID"
 msgstr "ເລດລຳດັບ"
 
-#, fuzzy
 msgctxt "field:party.relation.type,name:"
 msgid "Name"
 msgstr "ຊື່"
 
-#, fuzzy
 msgctxt "field:party.relation.type,rec_name:"
 msgid "Name"
 msgstr "ຊື່"
 
 msgctxt "field:party.relation.type,reverse:"
 msgid "Reverse Relation"
-msgstr ""
+msgstr "ຄວາມສຳພັນກັບກັນ"
 
-#, fuzzy
 msgctxt "field:party.relation.type,write_date:"
 msgid "Write Date"
 msgstr "ວັນທີບັນທຶກ"
 
-#, fuzzy
 msgctxt "field:party.relation.type,write_uid:"
 msgid "Write User"
-msgstr "ສ້າງຜູ້ໃຊ້"
+msgstr "ຜູ້ບັນທຶກ"
+
+msgctxt "help:party.relation.type,name:"
+msgid "The main identifier of the relation type."
+msgstr "ຕົວລະບຸຕົວຕົນຫຼັກຂອງປະເພດສາຍພົວພັນ"
+
+msgctxt "help:party.relation.type,reverse:"
+msgid "Create automatically the reverse relation."
+msgstr "ສ້າງສາຍພົວພັນຢ້ອນກັບຢ່າງອັດຕະໂນມັດ"
 
 msgctxt "model:ir.action,name:act_relation_all"
 msgid "Party Relations"
-msgstr ""
+msgstr "ຄວາມສຳພັນຂອງພາກສ່ວນ"
 
 msgctxt "model:ir.action,name:act_relation_type"
 msgid "Relation Types"
-msgstr ""
+msgstr "ປະເພດຄວາມສຳພັນ"
 
 msgctxt "model:ir.ui.menu,name:menu_relation_all"
 msgid "Party Relations"
-msgstr ""
+msgstr "ຄວາມສຳພັນຂອງພາກສ່ວນ"
 
 msgctxt "model:ir.ui.menu,name:menu_relation_type"
 msgid "Relation Types"
-msgstr ""
+msgstr "ປະເພດຄວາມສຳພັນ"
 
 msgctxt "model:party.relation,name:"
 msgid "Party Relation"
-msgstr ""
+msgstr "ຄວາມສຳພັນຂອງພາກສ່ວນ"
 
 msgctxt "model:party.relation.all,name:"
 msgid "Party Relation"
-msgstr ""
+msgstr "ຄວາມສຳພັນຂອງພາກສ່ວນ"
 
 msgctxt "model:party.relation.type,name:"
 msgid "Relation Type"
-msgstr ""
+msgstr "ປະເພດຄວາມສຳພັນ"
 
 msgctxt "view:party.party:"
 msgid "Relations"
-msgstr ""
+msgstr "ຄວາມສຳພັນ"
