--- a/locale/pl.po
+++ b/locale/pl.po
@@ -110,6 +110,14 @@ msgctxt "field:party.relation.type,write_uid:"
 msgid "Write User"
 msgstr "Zapisał"
 
+msgctxt "help:party.relation.type,name:"
+msgid "The main identifier of the relation type."
+msgstr "Główny identyfikator typu relacji."
+
+msgctxt "help:party.relation.type,reverse:"
+msgid "Create automatically the reverse relation."
+msgstr "Utwórz automatycznie odwróconą relację."
+
 msgctxt "model:ir.action,name:act_relation_all"
 msgid "Party Relations"
 msgstr "Relacje strony"
