--- a/locale/zh_CN.po
+++ b/locale/zh_CN.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -25,10 +25,9 @@ msgctxt "field:party.relation,id:"
 msgid "ID"
 msgstr "编号"
 
-#, fuzzy
 msgctxt "field:party.relation,rec_name:"
-msgid "Name"
-msgstr "纳木"
+msgid "Record Name"
+msgstr ""
 
 msgctxt "field:party.relation,to:"
 msgid "To"
@@ -68,10 +67,9 @@ msgctxt "field:party.relation.all,id:"
 msgid "ID"
 msgstr "编号"
 
-#, fuzzy
 msgctxt "field:party.relation.all,rec_name:"
-msgid "Name"
-msgstr "纳木"
+msgid "Record Name"
+msgstr ""
 
 msgctxt "field:party.relation.all,to:"
 msgid "To"
@@ -112,10 +110,9 @@ msgctxt "field:party.relation.type,name:"
 msgid "Name"
 msgstr "纳木"
 
-#, fuzzy
 msgctxt "field:party.relation.type,rec_name:"
-msgid "Name"
-msgstr "纳木"
+msgid "Record Name"
+msgstr ""
 
 msgctxt "field:party.relation.type,reverse:"
 msgid "Reverse Relation"
