--- a/locale/pt.po
+++ b/locale/pt.po
@@ -118,25 +118,21 @@ msgctxt "help:party.relation.type,reverse:"
 msgid "Create automatically the reverse relation."
 msgstr "Criar a relação inversa automaticamente."
 
-#, fuzzy
 msgctxt "model:ir.action,name:act_relation_all"
 msgid "Party Relations"
-msgstr "Party Relations"
+msgstr "Relações da Pessoa"
 
-#, fuzzy
 msgctxt "model:ir.action,name:act_relation_type"
 msgid "Relation Types"
-msgstr "Relation Types"
+msgstr "Tipos de Relação"
 
-#, fuzzy
 msgctxt "model:ir.ui.menu,name:menu_relation_all"
 msgid "Party Relations"
-msgstr "Party Relations"
+msgstr "Relações da Pessoa"
 
-#, fuzzy
 msgctxt "model:ir.ui.menu,name:menu_relation_type"
 msgid "Relation Types"
-msgstr "Relation Types"
+msgstr "Tipos de Relação"
 
 msgctxt "model:party.relation,name:"
 msgid "Party Relation"
