--- a/locale/zh_CN.po
+++ b/locale/zh_CN.po
@@ -4,169 +4,76 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "field:party.party,relations:"
 msgid "Relations"
-msgstr ""
-
-#, fuzzy
-msgctxt "field:party.relation,create_date:"
-msgid "Create Date"
-msgstr "创建日期:"
-
-#, fuzzy
-msgctxt "field:party.relation,create_uid:"
-msgid "Create User"
-msgstr "添加用户"
+msgstr "关系"
 
 msgctxt "field:party.relation,from_:"
 msgid "From"
-msgstr ""
-
-#, fuzzy
-msgctxt "field:party.relation,id:"
-msgid "ID"
-msgstr "编号"
-
-msgctxt "field:party.relation,rec_name:"
-msgid "Record Name"
 msgstr ""
 
 msgctxt "field:party.relation,to:"
 msgid "To"
 msgstr ""
 
-#, fuzzy
 msgctxt "field:party.relation,type:"
 msgid "Type"
 msgstr "类型"
 
-#, fuzzy
-msgctxt "field:party.relation,write_date:"
-msgid "Write Date"
-msgstr "写入日期"
-
-#, fuzzy
-msgctxt "field:party.relation,write_uid:"
-msgid "Write User"
-msgstr "写入帐号"
-
-#, fuzzy
-msgctxt "field:party.relation.all,create_date:"
-msgid "Create Date"
-msgstr "创建日期:"
-
-#, fuzzy
-msgctxt "field:party.relation.all,create_uid:"
-msgid "Create User"
-msgstr "添加用户"
-
 msgctxt "field:party.relation.all,from_:"
 msgid "From"
-msgstr ""
-
-#, fuzzy
-msgctxt "field:party.relation.all,id:"
-msgid "ID"
-msgstr "编号"
-
-msgctxt "field:party.relation.all,rec_name:"
-msgid "Record Name"
 msgstr ""
 
 msgctxt "field:party.relation.all,to:"
 msgid "To"
 msgstr ""
 
-#, fuzzy
 msgctxt "field:party.relation.all,type:"
 msgid "Type"
 msgstr "类型"
 
-#, fuzzy
-msgctxt "field:party.relation.all,write_date:"
-msgid "Write Date"
-msgstr "写入日期"
-
-#, fuzzy
-msgctxt "field:party.relation.all,write_uid:"
-msgid "Write User"
-msgstr "写入帐号"
-
-#, fuzzy
-msgctxt "field:party.relation.type,create_date:"
-msgid "Create Date"
-msgstr "创建日期:"
-
-#, fuzzy
-msgctxt "field:party.relation.type,create_uid:"
-msgid "Create User"
-msgstr "添加用户"
-
-#, fuzzy
-msgctxt "field:party.relation.type,id:"
-msgid "ID"
-msgstr "编号"
-
-#, fuzzy
 msgctxt "field:party.relation.type,name:"
 msgid "Name"
-msgstr "纳木"
-
-msgctxt "field:party.relation.type,rec_name:"
-msgid "Record Name"
-msgstr ""
+msgstr "名称"
 
 msgctxt "field:party.relation.type,reverse:"
 msgid "Reverse Relation"
-msgstr ""
-
-#, fuzzy
-msgctxt "field:party.relation.type,write_date:"
-msgid "Write Date"
-msgstr "写入日期"
-
-#, fuzzy
-msgctxt "field:party.relation.type,write_uid:"
-msgid "Write User"
-msgstr "写入帐号"
+msgstr "逆向关系"
 
 msgctxt "help:party.relation.type,name:"
 msgid "The main identifier of the relation type."
-msgstr ""
+msgstr "此关系类型的主标识."
 
 msgctxt "help:party.relation.type,reverse:"
 msgid "Create automatically the reverse relation."
-msgstr ""
+msgstr "自动创建逆向关系."
 
 msgctxt "model:ir.action,name:act_relation_all"
 msgid "Party Relations"
-msgstr "Party Relations"
+msgstr "参与对象关系"
 
 msgctxt "model:ir.action,name:act_relation_type"
 msgid "Relation Types"
-msgstr "Relation Types"
+msgstr "关系类型"
 
 msgctxt "model:ir.ui.menu,name:menu_relation_all"
 msgid "Party Relations"
-msgstr "Party Relations"
+msgstr "参与对象关系"
 
 msgctxt "model:ir.ui.menu,name:menu_relation_type"
 msgid "Relation Types"
-msgstr "Relation Types"
+msgstr "关系类型"
 
-#, fuzzy
 msgctxt "model:party.relation,name:"
 msgid "Party Relation"
-msgstr "Party Relations"
+msgstr "参与对象关系"
 
-#, fuzzy
 msgctxt "model:party.relation.all,name:"
 msgid "Party Relation"
-msgstr "Party Relations"
+msgstr "参与对象关系"
 
-#, fuzzy
 msgctxt "model:party.relation.type,name:"
 msgid "Relation Type"
-msgstr "Relation Types"
+msgstr "关系类型"
 
 msgctxt "view:party.party:"
 msgid "Relations"
-msgstr ""
+msgstr "关系"
