--- a/locale/de.po
+++ b/locale/de.po
@@ -2,6 +2,10 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "field:party.party,distance:"
+msgid "Distance"
+msgstr "Distanz"
+
 msgctxt "field:party.party,relations:"
 msgid "Relations"
 msgstr "Beziehungen"
@@ -37,6 +41,10 @@ msgstr "Name"
 msgctxt "field:party.relation.type,reverse:"
 msgid "Reverse Relation"
 msgstr "Umkehrbeziehung"
+
+msgctxt "field:party.relation.type,usages:"
+msgid "Usages"
+msgstr "Verwendungen"
 
 msgctxt "help:party.relation.type,name:"
 msgid "The main identifier of the relation type."
