--- a/locale/es.po
+++ b/locale/es.po
@@ -2,6 +2,10 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "field:party.party,distance:"
+msgid "Distance"
+msgstr "Distancia"
+
 msgctxt "field:party.party,relations:"
 msgid "Relations"
 msgstr "Relaciones"
@@ -37,6 +41,10 @@ msgstr "Nombre"
 msgctxt "field:party.relation.type,reverse:"
 msgid "Reverse Relation"
 msgstr "Relación inversa"
+
+msgctxt "field:party.relation.type,usages:"
+msgid "Usages"
+msgstr "Usos"
 
 msgctxt "help:party.relation.type,name:"
 msgid "The main identifier of the relation type."
