--- a/locale/et.po
+++ b/locale/et.po
@@ -2,6 +2,10 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "field:party.party,distance:"
+msgid "Distance"
+msgstr ""
+
 msgctxt "field:party.party,relations:"
 msgid "Relations"
 msgstr "Seotud"
@@ -36,6 +40,10 @@ msgstr "Nimi"
 
 msgctxt "field:party.relation.type,reverse:"
 msgid "Reverse Relation"
+msgstr ""
+
+msgctxt "field:party.relation.type,usages:"
+msgid "Usages"
 msgstr ""
 
 msgctxt "help:party.relation.type,name:"
