--- a/locale/fr.po
+++ b/locale/fr.po
@@ -2,6 +2,10 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "field:party.party,distance:"
+msgid "Distance"
+msgstr "Distance"
+
 msgctxt "field:party.party,relations:"
 msgid "Relations"
 msgstr "Relations"
@@ -37,6 +41,10 @@ msgstr "Nom"
 msgctxt "field:party.relation.type,reverse:"
 msgid "Reverse Relation"
 msgstr "Relation inverse"
+
+msgctxt "field:party.relation.type,usages:"
+msgid "Usages"
+msgstr "Usages"
 
 msgctxt "help:party.relation.type,name:"
 msgid "The main identifier of the relation type."
