--- a/locale/nl.po
+++ b/locale/nl.po
@@ -2,6 +2,10 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "field:party.party,distance:"
+msgid "Distance"
+msgstr "Afstand"
+
 msgctxt "field:party.party,relations:"
 msgid "Relations"
 msgstr "Relaties"
@@ -37,6 +41,10 @@ msgstr "Naam"
 msgctxt "field:party.relation.type,reverse:"
 msgid "Reverse Relation"
 msgstr "Omgekeerde relatie"
+
+msgctxt "field:party.relation.type,usages:"
+msgid "Usages"
+msgstr "Gebruik"
 
 msgctxt "help:party.relation.type,name:"
 msgid "The main identifier of the relation type."
