--- a/locale/zh_CN.po
+++ b/locale/zh_CN.po
@@ -2,17 +2,21 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "field:party.party,distance:"
+msgid "Distance"
+msgstr ""
+
 msgctxt "field:party.party,relations:"
 msgid "Relations"
 msgstr "关系"
 
 msgctxt "field:party.relation,from_:"
 msgid "From"
-msgstr ""
+msgstr "从"
 
 msgctxt "field:party.relation,to:"
 msgid "To"
-msgstr ""
+msgstr "至"
 
 msgctxt "field:party.relation,type:"
 msgid "Type"
@@ -20,11 +24,11 @@ msgstr "类型"
 
 msgctxt "field:party.relation.all,from_:"
 msgid "From"
-msgstr ""
+msgstr "从"
 
 msgctxt "field:party.relation.all,to:"
 msgid "To"
-msgstr ""
+msgstr "至"
 
 msgctxt "field:party.relation.all,type:"
 msgid "Type"
@@ -37,6 +41,10 @@ msgstr "名称"
 msgctxt "field:party.relation.type,reverse:"
 msgid "Reverse Relation"
 msgstr "逆向关系"
+
+msgctxt "field:party.relation.type,usages:"
+msgid "Usages"
+msgstr ""
 
 msgctxt "help:party.relation.type,name:"
 msgid "The main identifier of the relation type."
