Update translations [skip ci]

--- a/locale/de.po
+++ b/locale/de.po
@@ -2,10 +2,6 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "field:party.party,distance:"
-msgid "Distance"
-msgstr "Distanz"
-
 msgctxt "field:party.party,relations:"
 msgid "Relations"
 msgstr "Beziehungen"
@@ -55,16 +51,16 @@ msgid "Create automatically the reverse relation."
 msgstr "Die Umkehrrelation automatisch erstellen."
 
 msgctxt "model:ir.action,name:act_relation_all"
-msgid "Party Relations"
-msgstr "Parteibeziehungen"
+msgid "Relations"
+msgstr "Beziehungen"
 
 msgctxt "model:ir.action,name:act_relation_type"
 msgid "Relation Types"
 msgstr "Beziehungstypen"
 
 msgctxt "model:ir.ui.menu,name:menu_relation_all"
-msgid "Party Relations"
-msgstr "Parteibeziehungen"
+msgid "Relations"
+msgstr "Beziehungen"
 
 msgctxt "model:ir.ui.menu,name:menu_relation_type"
 msgid "Relation Types"
