--- a/locale/ca.po
+++ b/locale/ca.po
@@ -2,10 +2,6 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "field:party.party,distance:"
-msgid "Distance"
-msgstr "Distància"
-
 msgctxt "field:party.party,relations:"
 msgid "Relations"
 msgstr "Relacions"
@@ -55,16 +51,16 @@ msgid "Create automatically the reverse relation."
 msgstr "Crea automàticament la relació inversa."
 
 msgctxt "model:ir.action,name:act_relation_all"
-msgid "Party Relations"
-msgstr "Relacions entre tercers"
+msgid "Relations"
+msgstr "Relacions"
 
 msgctxt "model:ir.action,name:act_relation_type"
 msgid "Relation Types"
 msgstr "Tipus de relació"
 
 msgctxt "model:ir.ui.menu,name:menu_relation_all"
-msgid "Party Relations"
-msgstr "Relacions entre tercers"
+msgid "Relations"
+msgstr "Relacions"
 
 msgctxt "model:ir.ui.menu,name:menu_relation_type"
 msgid "Relation Types"
