--- a/locale/pl.po
+++ b/locale/pl.po
@@ -2,10 +2,6 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "field:party.party,distance:"
-msgid "Distance"
-msgstr "Odległość"
-
 msgctxt "field:party.party,relations:"
 msgid "Relations"
 msgstr "Relacje"
@@ -54,17 +50,19 @@ msgctxt "help:party.relation.type,reverse:"
 msgid "Create automatically the reverse relation."
 msgstr "Utwórz automatycznie odwróconą relację."
 
+#, fuzzy
 msgctxt "model:ir.action,name:act_relation_all"
-msgid "Party Relations"
-msgstr "Relacje strony"
+msgid "Relations"
+msgstr "Relacje"
 
 msgctxt "model:ir.action,name:act_relation_type"
 msgid "Relation Types"
 msgstr "Typy relacji"
 
+#, fuzzy
 msgctxt "model:ir.ui.menu,name:menu_relation_all"
-msgid "Party Relations"
-msgstr "Relacje strony"
+msgid "Relations"
+msgstr "Relacje"
 
 msgctxt "model:ir.ui.menu,name:menu_relation_type"
 msgid "Relation Types"
