--- a/locale/ro.po
+++ b/locale/ro.po
@@ -4,84 +4,80 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "field:party.party,relations:"
 msgid "Relations"
-msgstr "ຄວາມສຳພັນ"
+msgstr "Relaţii"
 
 msgctxt "field:party.relation,from_:"
 msgid "From"
-msgstr "ຈາກ"
+msgstr "De la"
 
 msgctxt "field:party.relation,to:"
 msgid "To"
-msgstr "ເຖິງ"
+msgstr "La"
 
 msgctxt "field:party.relation,type:"
 msgid "Type"
-msgstr "ປະເພດ"
+msgstr "Tip"
 
 msgctxt "field:party.relation.all,from_:"
 msgid "From"
-msgstr "ຈາກ"
+msgstr "De la"
 
 msgctxt "field:party.relation.all,to:"
 msgid "To"
-msgstr "ເຖິງ"
+msgstr "La"
 
 msgctxt "field:party.relation.all,type:"
 msgid "Type"
-msgstr "ປະເພດ"
+msgstr "Tip"
 
 msgctxt "field:party.relation.type,name:"
 msgid "Name"
-msgstr "ຊື່"
+msgstr "Denumire"
 
 msgctxt "field:party.relation.type,reverse:"
 msgid "Reverse Relation"
-msgstr "ຄວາມສຳພັນກັບກັນ"
+msgstr "Relația inversă"
 
 msgctxt "field:party.relation.type,usages:"
 msgid "Usages"
-msgstr ""
+msgstr "Utilizari"
 
 msgctxt "help:party.relation.type,name:"
 msgid "The main identifier of the relation type."
-msgstr "ຕົວລະບຸຕົວຕົນຫຼັກຂອງປະເພດສາຍພົວພັນ"
+msgstr "Principalul identificator al tipului de relație."
 
 msgctxt "help:party.relation.type,reverse:"
 msgid "Create automatically the reverse relation."
-msgstr "ສ້າງສາຍພົວພັນຢ້ອນກັບຢ່າງອັດຕະໂນມັດ"
+msgstr "Creați automat relația inversă."
 
-#, fuzzy
 msgctxt "model:ir.action,name:act_relation_all"
 msgid "Relations"
-msgstr "ຄວາມສຳພັນ"
+msgstr "Relaţii"
 
-#, fuzzy
 msgctxt "model:ir.action,name:act_relation_type"
 msgid "Relation Types"
-msgstr "Relation Types"
+msgstr "Tipuri de relații"
 
-#, fuzzy
 msgctxt "model:ir.ui.menu,name:menu_relation_all"
 msgid "Relations"
-msgstr "ຄວາມສຳພັນ"
+msgstr "Relaţii"
 
-#, fuzzy
 msgctxt "model:ir.ui.menu,name:menu_relation_type"
 msgid "Relation Types"
-msgstr "Relation Types"
+msgstr "Tipuri de relații"
 
 msgctxt "model:party.relation,name:"
 msgid "Party Relation"
-msgstr "ຄວາມສຳພັນຂອງພາກສ່ວນ"
+msgstr "Relații de parte"
 
 msgctxt "model:party.relation.all,name:"
 msgid "Party Relation"
-msgstr "ຄວາມສຳພັນຂອງພາກສ່ວນ"
+msgstr "Relații de parte"
 
 msgctxt "model:party.relation.type,name:"
 msgid "Relation Type"
-msgstr "ປະເພດຄວາມສຳພັນ"
+msgstr "Tipuri de relații"
 
 msgctxt "view:party.party:"
 msgid "Relations"
-msgstr "ຄວາມສຳພັນ"
+msgstr "Relaţii"
