--- a/locale/zh_CN.po
+++ b/locale/zh_CN.po
@@ -2,10 +2,6 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "field:party.party,distance:"
-msgid "Distance"
-msgstr ""
-
 msgctxt "field:party.party,relations:"
 msgid "Relations"
 msgstr "关系"
@@ -40,11 +36,11 @@ msgstr "名称"
 
 msgctxt "field:party.relation.type,reverse:"
 msgid "Reverse Relation"
-msgstr "逆向关系"
+msgstr "反向关系"
 
 msgctxt "field:party.relation.type,usages:"
 msgid "Usages"
-msgstr ""
+msgstr "用法"
 
 msgctxt "help:party.relation.type,name:"
 msgid "The main identifier of the relation type."
@@ -52,19 +48,21 @@ msgstr "此关系类型的主标识."
 
 msgctxt "help:party.relation.type,reverse:"
 msgid "Create automatically the reverse relation."
-msgstr "自动创建逆向关系."
+msgstr "自动创建反向关系."
 
+#, fuzzy
 msgctxt "model:ir.action,name:act_relation_all"
-msgid "Party Relations"
-msgstr "参与者关系"
+msgid "Relations"
+msgstr "关系"
 
 msgctxt "model:ir.action,name:act_relation_type"
 msgid "Relation Types"
 msgstr "关系类型"
 
+#, fuzzy
 msgctxt "model:ir.ui.menu,name:menu_relation_all"
-msgid "Party Relations"
-msgstr "参与者关系"
+msgid "Relations"
+msgstr "关系"
 
 msgctxt "model:ir.ui.menu,name:menu_relation_type"
 msgid "Relation Types"
